index page responsive

--- a/resources/assets/scss/Agani/footer.scss
+++ b/resources/assets/scss/Agani/footer.scss
@@ -89,7 +89,7 @@ footer.base {
   h4 {
     color: #fff;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 1em;
   }
   .bottom {
     background: #818181;
