--- a/resources/assets/scss/Agani/header.scss
+++ b/resources/assets/scss/Agani/header.scss
@@ -1,6 +1,26 @@
 header {
   background: $white;
 
+  .search-header {
+    background: none;
+    border: none;
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+    border-left: 1px solid #e7e7e7;
+    cursor: pointer;
+    &:focus {
+      border: none !important;
+      border-left: 1px solid #e7e7e7;
+    }
+    .icon-search {
+      display: block;
+      width: 25px;
+      height: 25px;
+      @include ui-sprite(search_b);
+    }
+  }
+
   .top {
     background: $blue;
 
@@ -53,29 +73,32 @@ header {
                 background: none;
                 color: $white;
               }
-              &:before {
-                position: absolute;
-                content: '';
-                width: 25px;
-                height: 25px;
-                top: 5px;
-                left: -13px;
-              }
-              &.enter {
+              i {
                 &:before {
-                  @include ui-sprite(key);
+                  position: absolute;
+                  content: '';
+                  width: 25px;
+                  height: 25px;
+                  top: 5px;
+                  left: -13px;
+                }
+                &.enter {
+                  &:before {
+                    @include ui-sprite(key);
+                  }
+                }
+                &.register {
+                  &:before {
+                    @include ui-sprite(reg);
+                  }
+                }
+                &.help {
+                  &:before {
+                    @include ui-sprite(help);
+                  }
                 }
               }
-              &.register {
-                &:before {
-                  @include ui-sprite(reg);
-                }
-              }
-              &.help {
-                &:before {
-                  @include ui-sprite(help);
-                }
-              }
+
             }
           }
         }
@@ -107,13 +130,15 @@ header {
       background: url('/img/bg/sky.jpg') center no-repeat;
       background-size: cover;
       color: $grey;
-      p {
+      a {
         padding: 12px 7px 12px 30px;
         margin: 0;
         line-height: 20px;
-        font-size: 15px;
+        font-size: 1.071em;
+        display: block;
+        color: #202020;
       }
-      a {
+      a.btn {
         @include transation(background, 0.2s , ease-out);
         color: $white;
         padding: 10px 15px;
@@ -235,7 +260,7 @@ header {
                 }
               }
               a {
-                font-size: 15px;
+                font-size: 1.071em;
                 text-transform: uppercase;
                 padding: 12px 25px 9px;
                 line-height: 24px;
