--- a/resources/assets/scss/Agani/main.scss
+++ b/resources/assets/scss/Agani/main.scss
@@ -7,7 +7,7 @@
 
     h2 {
       margin-top: 30px;
-      font-size: 31px;
+      font-size: 2.214em;
       font-weight: 400;
     }
     h2,
@@ -15,11 +15,11 @@
       color: #fff;
       margin-top: 40px;
       margin-bottom: 50px;
-      font-size: 38px;
+      font-size: 2.714em;
     }
     p {
       color: #fff;
-      font-size: 29px;
+      font-size: 2.071em;
       margin: 36px 0;
       line-height: 32px;
       font-weight: 400;
@@ -27,7 +27,7 @@
     .button {
       *display: inline;
       display: inline-block;
-      font-size: 25px;
+      font-size: 1.786em;
       padding: 4px 10px;
       margin-right: 28px;
     }
@@ -53,11 +53,11 @@
       list-style: none;
       padding: 15px 10px;
       &:first-child {
-        font-size: 18px;
+        font-size: 1.286em;
       }
       select {
         cursor: pointer;
-        font-size: 16px;
+        font-size: 1.143em;
         height: 40px !important;
       }
       &.additional {
@@ -193,7 +193,7 @@ main.base {
               background: $orange;
               @include border-radius(0);
               color: #fff;
-              font-weight: 500;
+              font-weight: 400;
               &:hover {
                 /*border:none;*/
               }
@@ -208,6 +208,30 @@ main.base {
       .nav {
         margin-top: -41px;
       }
+      .dropdown {
+        button {
+          border: none;
+          background: $orange;
+          @include border-radius(0);
+          color: #fff;
+          font-weight: 400;
+          font-size: 130%;
+        }
+      }
+      .dropdown-menu {
+        @include border-radius(0);
+        .active {
+          a {
+            text-decoration: none;
+            color: #262626;
+            background-color: #fff;
+            &:hover {
+              background-color: #f5f5f5;
+            }
+          }
+        }
+      }
+
     }
     .tab-content {
       margin-top: 20px;
@@ -225,7 +249,7 @@ main.base {
             margin: 5px 0;
           }
           a {
-            color: #000000;
+            color: #202020;
             &.title {
               font-size: 1.714em;
               font-weight: 500;
@@ -310,7 +334,7 @@ main.base {
         }
         &.name {
           margin-top: 6px;
-          font-size: 16px;
+          font-size: 1.143em;
         }
       }
     }
@@ -327,7 +351,7 @@ main.base {
         background-color: transparent;
         position: absolute;
         top: 30%;
-        left: -30px;
+        left: -10px;
         &:hover {
           @include ui-sprite(left_h);
           background-color: transparent;
@@ -340,7 +364,7 @@ main.base {
         background-color: transparent;
         position: absolute;
         top: 30%;
-        right: -40px;
+        right: -20px;
         &:hover {
           @include ui-sprite(right_h);
           background-color: transparent;
@@ -401,6 +425,29 @@ main.base {
       }
       .nav {
         margin-top: -41px;
+      }
+      .dropdown {
+        button {
+          border: none;
+          background: $green;
+          @include border-radius(0);
+          color: #fff;
+          font-weight: 400;
+          font-size: 130%;
+        }
+      }
+      .dropdown-menu {
+        @include border-radius(0);
+        .active {
+          a {
+            text-decoration: none;
+            color: #262626;
+            background-color: #fff;
+            &:hover {
+              background-color: #f5f5f5;
+            }
+          }
+        }
       }
     }
     .tab-content {
@@ -474,12 +521,12 @@ main.base {
         margin: 18px 0;
       }
       h2 {
-        font-size: 24px;
-        margin-top: 11px;
+        font-size: 2.143em;
+        margin-top: 30px;
         border-bottom: 2px solid $orange;
       }
       h4 {
-        font-size: 14px;
+        font-size: 1em;
         margin-top: 20px;
       }
     }
@@ -503,7 +550,7 @@ main.base {
         border-bottom: 2px solid $green;
         a {
           font-size: 1.071em;
-          color: #000000;
+          color: #202020;
           font-weight: 500;
           @include border-radius(0);
           @include transation(all, 0.2s, ease-out);
@@ -570,7 +617,7 @@ main.base {
       .nav-tabs {
         border-bottom:none;
         li {
-          a {
+          a.text {
             font-size: 1.071em;
             color: #000;
             font-weight: 500;
@@ -605,10 +652,20 @@ main.base {
               }
             }
           }
+          a {
+            color: #202020;
+            border: none;
+            &:hover {
+              border: none;
+              background: $orange;
+              @include border-radius(0);
+              color: #fff;
+            }
+          }
         }
       }
       .nav {
-        margin-top: -41px;
+        margin-top: -39px;
       }
     }
     .tab-content {
@@ -673,11 +730,11 @@ main.base {
         padding-left: 20px;
         margin-left: 30px;
         h3 {
-          font-size: 16px;
+          font-size: 1.143em;
           font-weight: 400;
         }
         span {
-          font-size: 16px;
+          font-size: 1.143em;
           font-weight: 400;
         }
       }
